open quellen in new tab

--- a/sites/quellen.html
+++ b/sites/quellen.html
@@ -23,8 +23,8 @@
         <div class="align-left">
             <p>Bilder von:</p>
             <ul>
-                <li><a href="https://apple.com">apple.com</a></li>
-                <li><a href="https://istockphoto.com">istockphoto.com</a></li>
+                <li><a href="https://apple.com" target="_blank">apple.com</a></li>
+                <li><a href="https://istockphoto.com" target="_blank">istockphoto.com</a></li>
             </ul>
         </div>
     </div>
